# ezjson

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: ezjson-config.cmake  ezjson.pc.in
include/ezjson/: json.h
src/: json.cpp
test/: CMakeLists.txt  main.cpp
test_external/: CMakeLists.txt  main.cpp  readme.md
